--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="calculate">Calculate</string>
     <string name="calculatedResult">Here you can find out your zodiac sign</string>
     <string name="welcomeMessage">Hello, Welcome to <b>YourDestiny.</b>My University project</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="Home">Memories</string>
 </resources>
