API working. Logo and zodiac signs created. nearly there :)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="welcomeMessage">Hello, Welcome to <b>YourDestiny.</b>My University project</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="Home">Memories</string>
+    <string name="save">Save</string>
 </resources>
